--- a/frontend/public/manifest.json
+++ b/frontend/public/manifest.json
@@ -20,6 +20,6 @@
   ],
   "start_url": ".",
   "display": "standalone",
-  "theme_color": "#4155ef",
+  "theme_color": "#05092a",
   "background_color": "#ffffff"
 }
